# pkg_extractor

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
pkg_extractor/: Cargo.toml
pkg_extractor/src/: lib.rs  main.rs  pbzx.rs
src/: lib.rs  main.rs  pbzx.rs
tests/: real_pkgs.rs
tests/fixtures/: gstreamer-1.28.2-devel.txt
