[package]
name = "pkg-extractor"
authors = ["Thibault Saunier <tsaunier@igalia.com>"]
version = "0.1.1"
edition = "2021"
description = "Extract macOS .pkg files (flat packages) — supports product and component packages, PBZX payloads, and xar fallback"
license = "MPL-2.0"
repository = "https://github.com/thiblahute/pkg_extractor"
readme = "README.md"
keywords = ["macos", "pkg", "extract", "apple", "installer"]
categories = ["command-line-utilities", "compression"]

[lib]
name = "pkg_extractor"
path = "src/lib.rs"

[dependencies]
# Git version needed: the published 0.20 depends on xz2/lzma-sys which conflicts
# with liblzma-sys (links = "lzma"). Upstream switched to liblzma in d66848d1.
apple-flat-package = { git = "https://github.com/indygreg/apple-platform-rs", rev = "0445322b" }
apple-xar = { git = "https://github.com/indygreg/apple-platform-rs", rev = "0445322b" }
structopt = "0.3"
tempfile = "3.2"
liblzma = { version = "0.4", default-features = false }
libflate = "2"
cpio-archive = "0.10"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "pkg-extractor"
path = "src/main.rs"
