[package]
name = "pkg-extractor"
authors = ["Thibault Saunier <tsaunier@igalia.com>"]
version = "0.1.1"
edition = "2021"
description = "Extract macOS .pkg files (flat packages) — supports product and component packages, PBZX payloads, and xar fallback"
license = "MPL-2.0"
repository = "https://github.com/thiblahute/pkg_extractor"
readme = "README.md"
keywords = ["macos", "pkg", "extract", "apple", "installer"]
categories = ["command-line-utilities", "compression"]

[lib]
name = "pkg_extractor"
path = "src/lib.rs"

[dependencies]
# Git version needed: the published 0.20 depends on xz2/lzma-sys which conflicts
# with liblzma-sys (links = "lzma"). Upstream switched to liblzma in d66848d1.
# `version` is required for `cargo publish`; the git source is used locally.
apple-flat-package = { version = "0.20", git = "https://github.com/indygreg/apple-platform-rs", rev = "0445322b" }
apple-xar = { version = "0.20", git = "https://github.com/indygreg/apple-platform-rs", rev = "0445322b" }
structopt = "0.3"
liblzma = { version = "0.4", default-features = false }
libflate = "2"
cpio-archive = "0.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
bytes = "1"
reqwest = { version = "0.13", features = ["blocking"] }
rstest = "0.26"
tempfile = "3.2"

[[bin]]
name = "pkg-extractor"
path = "src/main.rs"
