[package]
name = "pkg-extractor"
authors = ["Thibault Saunier <tsaunier@igalia.com>"]
version = "0.1.3"
edition = "2021"
description = "Extract macOS .pkg files (flat packages): product and component packages with PBZX, gzip, or raw cpio payloads"
license = "MPL-2.0"
repository = "https://github.com/thiblahute/pkg_extractor"
readme = "README.md"
keywords = ["macos", "pkg", "extract", "apple", "installer"]
categories = ["command-line-utilities", "compression"]

[lib]
name = "pkg_extractor"
path = "src/lib.rs"

[dependencies]
# apple-flat-package/apple-xar (crates.io 0.20) pull in xz2 -> lzma-sys, which
# declares `links = "lzma"`. We decode pbzx payloads ourselves with the pure-Rust
# lzma-rust2: it has no `links` key, so it adds no second `links = "lzma"` crate.
# (Depending on liblzma-sys here did exactly that and broke the build and
# `cargo publish`, which resolves these deps from crates.io, not from git.)
apple-flat-package = "0.20"
apple-xar = "0.20"
structopt = "0.3"
lzma-rust2 = "0.16"
libflate = "2"
cpio-archive = "0.10"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
bytes = "1"
reqwest = { version = "0.13", features = ["blocking"] }
rstest = "0.26"
tempfile = "3.2"

[[bin]]
name = "pkg-extractor"
path = "src/main.rs"
